fix align columns

--- a/src/app/content/operations/contingency-list/contingency-list.component.scss
+++ b/src/app/content/operations/contingency-list/contingency-list.component.scss
@@ -34,8 +34,6 @@ $cell-xl: 100%;
     height: 40px;
 
     .mat-icon{
-      height: 20px;
-      width: 20px;
       margin-right: 3px;
     }
 
